--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
                 <a href="#">📷</a>
             </div>
             <p style="margin-top: 30px; opacity: 0.7;">© 2024 VTA Goods. All rights reserved. | vtagoods.com</p>
+            <p style="margin-top: 15px; opacity: 0.7;">
+                <a href="privacy.html" style="color: white; text-decoration: underline;">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 </body>
